--- a/.gitconfig
+++ b/.gitconfig
@@ -19,8 +19,10 @@
     cim  = commit -m
     ciam = commit -am
     fa   = fetch -a
-    po   = pull origin
-    pom  = pull origin master
+    plo  = pull origin
+    plom = pull origin master
+    pso  = push origin
+    psom = push origin master
     rb   = rebase
     rbi  = rebase -i
     rcim = commit --amend -m    # overwrite last commit message (recommit)
