--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,12 @@
 [user]
     name  = Jeremy Greenwood
     email = jeremymgreenwood@gmail.com
+    
 [core]
 	# Note: if notepad++ is in a different directory, either edit the path below or create a link at the specified directory
     editor = \"C:/Program Files (x86)/Notepad++/notepad++.exe\" -multiInst -notabbar -nosession -noPlugin
     autocrlf = true
+    
 [alias]
     a    = add
     ac	 = add ./*.c            # add all .c files in current directory and its subdirectories
@@ -30,15 +32,21 @@
     ri   = reset --merge        # reset index
     ri2w = reset --mixed        # reset index to working tree
     rw   = checkout .           # reset working tree (perform from top of tree)
-    rgreen = ri                 # reset alias, consistent with git bash coloring scheme
-    rgreen2red = ri2w           # reset alias, consistent with git bash coloring scheme
-    rred = rw                   # reset alias, consistent with git bash coloring scheme
+    rgreen     = !git ri        # reset alias, consistent with git bash coloring scheme
+    rgreen2red = !git ri2w      # reset alias, consistent with git bash coloring scheme
+    rred       = !git rw        # reset alias, consistent with git bash coloring scheme
     st   = status
     su   = submodule update
     suir = submodule update --init --recursive
     updt = !git checkout master && git fetch origin && git rebase origin/master && git submodule update --init --recursive
+
 [color]
-    status = auto
     branch = auto
     diff   = auto
     ui     = auto
+    
+[color "status"]
+    added     = green
+    changed   = red
+    untracked = cyan
+    
