--- a/.gitconfig
+++ b/.gitconfig
@@ -64,6 +64,10 @@
     # Update master branch and revert to current branch
     # Notes: this does not work when tree is dirty
     um   = !git fetch origin master && git checkout master && git pull origin master && git checkout @{-1}
+    
+    # Commit a fixup of previous commit with informational message
+    # Notes: this will set the commit to be "fixup" (automatically squashed without comments) when performing an interactive rebase
+    cifhm = !sh -c 'git commit --fixup=HEAD && LAST_COMMIT=$(git log -n 1 --format=%B) && git commit --amend -m \"$LAST_COMMIT\n\n${1}\"' -
 
 [color]
     branch = auto
