--- a/.gitconfig
+++ b/.gitconfig
@@ -68,6 +68,7 @@
     # Commit a fixup of previous commit with informational message
     # Notes: this will set the commit to be "fixup" (automatically squashed without comments) when performing an interactive rebase
     cifhm = !sh -c 'git commit --fixup=HEAD && LAST_COMMIT=$(git log -n 1 --format=%B) && git commit --amend -m \"$LAST_COMMIT\n\n${1}\"' -
+    cis   = !sh -c 'git cifhm' -
 
 [color]
     branch = auto
