fixup! Added alias for fixup with comment to basically be thought of as a simple squash component, since it will ultimately not have a message after interactive rebase.
fixed cis alias to use message parameter.

--- a/.gitconfig
+++ b/.gitconfig
@@ -68,7 +68,7 @@
     # Commit a fixup of previous commit with informational message
     # Notes: this will set the commit to be "fixup" (automatically squashed without comments) when performing an interactive rebase
     cifhm = !sh -c 'git commit --fixup=HEAD && LAST_COMMIT=$(git log -n 1 --format=%B) && git commit --amend -m \"$LAST_COMMIT\n\n${1}\"' -
-    cis   = !sh -c 'git cifhm' -
+    cis   = !sh -c 'git cifhm \"${1}\"' -
 
 [color]
     branch = auto
