Added aliases similar to cis but to automatically commit all tracked changes.

--- a/.gitconfig
+++ b/.gitconfig
@@ -68,7 +68,13 @@
     # Commit a fixup of previous commit with informational message
     # Notes: this will set the commit to be "fixup" (automatically squashed without comments) when performing an interactive rebase
     cifhm = !sh -c 'git commit --fixup=HEAD && LAST_COMMIT=$(git log -n 1 --format=%B) && git commit --amend -m \"$LAST_COMMIT\n\n${1}\"' -
+    # Same as above, alias acronym being "commit squash" as the message will be dropped after performing interactive rebase
     cis   = !sh -c 'git cifhm \"${1}\"' -
+    
+    # Commit all tracked changes as a fixup of previous commit with informational message
+    ciafhm= !sh -c 'git add --update && git cifhm \"${1}\"' -
+    # Same as above, alias acronym being "commit all squash"
+    cias  = !sh -c 'git ciafhm \"${1}\"' -
 
 [color]
     branch = auto
