Added cism/ciasm command to commit using --squash with message.

--- a/.gitconfig
+++ b/.gitconfig
@@ -75,6 +75,11 @@
     ciafhm= !sh -c 'git add --update && git cifhm \"${1}\"' -
     # Same as above, alias acronym being "commit all squash"
     cias  = !sh -c 'git ciafhm \"${1}\"' -
+    
+    # Commit a squash of previous commit with commit message to remain after interactive rebase
+    cism  = !sh -c 'git commit --squash=HEAD -m \"${1}\"' -
+    # Commit all tracked changes as a squash of previous commit
+    ciasm= !sh -c 'git add --update && git cism \"${1}\"' -
 
 [color]
     branch = auto
