--- a/.gitconfig
+++ b/.gitconfig
@@ -19,13 +19,13 @@
     ac	 = add ./*.c            # add all .c files in current directory and its subdirectories
     acpp = add ./*.cpp          # add all .cpp files in current directory and its subdirectories
     ah   = add ./*.h            # add all .h files in current directory and its subdirectories
-    au   = add --update
     br   = branch
     bra  = branch --all
     brm  = branch --move
     co   = checkout
     cob  = checkout -b
     com  = checkout master
+    cop  = checkout @{-1}
     ci   = commit
     cim  = commit -m
     ciam = commit --all -m
@@ -81,7 +81,14 @@
     # Blame functionality- finds a given file path(s) and blames a single line or between a start and end line
     # Usage: git bl <filename> [start] [end]
     # Notes: this requires creating a symbolic link in user home directory pointing to repository file "blame.sh"
+	#        this uses an incorrect directory from git bash if in a subdirectory from where git bash is launched
     bl   =  !sh -c '~/blame.sh $@' -
+	
+    # Reset Eclipse project files and show git status
+    re   = !git reset .project .cproject && git checkout -- .project .cproject && git status
+	
+    # Add all tracked files to index and show git status
+    au   = !git add --update && git status
 
 [color]
     branch = auto
