--- a/.gitconfig
+++ b/.gitconfig
@@ -93,7 +93,13 @@
     brapr = !sh -c 'git for-each-ref --sort=-committerdate refs/remotes/origin/ | sed \"s,.*refs/remotes/origin/\\(.*\\),\\1,\" | grep $( git gpbn )' -
 	
     # Display the number of commits for each file to see which files are changed most often
-    churn = !git log --all -M -C --name-only --format='format:' "$@" | sort | grep -v '^$' | uniq -c | sort | awk 'BEGIN {print "count,file"} {print $1 "," $2}'
+    poll-files = !git log --all -M -C --name-only --format='format:' "$@" | sort | grep -v '^$' | uniq -c | sort | awk 'BEGIN {print "count,file"} {print $1 "," $2}'
+    
+    # Display the number of author commits for each person to see who is active
+    poll-authors = !git log --all -M -C --format="%an" | sort | grep -v '^$' | uniq -c | sort
+    
+    # Display the number of committer commits for each person to see who is active
+    poll-committers = !git log --all -M -C --format="%cn" | sort | grep -v '^$' | uniq -c | sort
     
     # Commit a fixup of previous commit with informational message
     # Notes: this will set the commit to be "fixup" (automatically squashed without comments) when performing an interactive rebase
