--- a/.gitconfig
+++ b/.gitconfig
@@ -68,6 +68,7 @@
     reset-demote-staged = reset --mixed     # demote all staged changes to unstaged changes
     reset-file          = checkout --       # this only works for unstaged changes
     reset-unstaged      = checkout .
+    show-url            = !git remote show origin | grep URL
 
     #---------------------------------------------------------------
     # Complex and multi-command aliases
@@ -93,13 +94,19 @@
     brapr = !sh -c 'git for-each-ref --sort=-committerdate refs/remotes/origin/ | sed \"s,.*refs/remotes/origin/\\(.*\\),\\1,\" | grep $( git gpbn )' -
 	
     # Display the number of commits for each file to see which files are changed most often
-    poll-files = !git log --all -M -C --name-only --format='format:' "$@" | sort | grep -v '^$' | uniq -c | sort | awk 'BEGIN {print "count,file"} {print $1 "," $2}'
+    poll-files-commits = !git log --all -M -C --name-only --format='format:' "$@" | sort | grep -v '^$' | uniq -c | sort | awk 'BEGIN {print "count,file"} {print $1 "," $2}'
+    
+    # Display the number of author line changes for each person to see who is active
+    # TODO fix issue with using [']'s
+    #poll-author-line-changes = !sh -c 'git ls-files -z | xargs -0n1 git blame -w | perl -n -e '/^.*?\((.*?)\s+[\d]{4}/ && print $1,"\n"' | sort -f | uniq -c | sort -n' -
+    #poll-author-line-changes = !sh -c 'git ls-files -z | xargs -0n1 git blame -w | perl -n -e '/^.*?\((.*?)\s+[\d]{4}/ && print $1,"\n"' | sort -f | uniq -c | sort -n' -
+    # attempt using '\'':
+    #poll-author-line-changes = !sh -c 'git ls-files -z | xargs -0n1 git blame -w | perl -n -e '\''/^.*?\((.*?)\s+[\d]{4}/ && print $1,"\n"'\'' | sort -f | uniq -c | sort -n' -
+    # attempt using \':
+    #poll-author-line-changes = !sh -c 'git ls-files -z | xargs -0n1 git blame -w | perl -n -e \'/^.*?\((.*?)\s+[\d]{4}/ && print $1,"\n"\' | sort -f | uniq -c | sort -n' -
     
     # Display the number of author commits for each person to see who is active
-    poll-authors = !git log --all -M -C --format="%an" | sort | grep -v '^$' | uniq -c | sort
-    
-    # Display the number of committer commits for each person to see who is active
-    poll-committers = !git log --all -M -C --format="%cn" | sort | grep -v '^$' | uniq -c | sort
+    poll-author-commits = !git log --all -M -C --format="%an" | sort | grep -v '^$' | uniq -c | sort
     
     # Commit a fixup of previous commit with informational message
     # Notes: this will set the commit to be "fixup" (automatically squashed without comments) when performing an interactive rebase
